# templates-samples

./: .gitmodules  LICENSE
fastapi-sqlalchemy-template/: pyproject.toml
fastapi-sqlalchemy-template/app-name-directory/: main.py  template.env
fastapi-sqlalchemy-template/app-name-directory/api/api_v1/: users.py
fastapi-sqlalchemy-template/app-name-directory/core/: config.py
fastapi-sqlalchemy-template/app-name-directory/db/: db_helper.py
fastapi-sqlalchemy-template/app-name-directory/db/models/: __init__.py  sample_model.py
loguru-wrapper-for-logging/: _logger.py
